--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -37,6 +37,10 @@
     .test-section-inner-with-icon {
         padding: 20px 20px 20px 140px;
 
+        @media print {
+            padding: 0;
+        }
+
         &.first {
             padding-bottom: 0;
         }
