--- a/css/screen.css
+++ b/css/screen.css
@@ -1845,6 +1845,121 @@ h4 .small {
     width: 95.8333%;
   }
 }
+/* Print */
+@media only print {
+  /* Media specific unit sizes */
+  .yui3-g-r > .yui3-u-1-print {
+    width: 100%;
+  }
+
+  .yui3-g-r > .yui3-u-1-2-print {
+    width: 50%;
+  }
+
+  .yui3-g-r > .yui3-u-1-3-print {
+    width: 33.33333%;
+  }
+
+  .yui3-g-r > .yui3-u-2-3-print {
+    width: 66.66666%;
+  }
+
+  .yui3-g-r > .yui3-u-1-4-print {
+    width: 25%;
+  }
+
+  .yui3-g-r > .yui3-u-3-4-print {
+    width: 75%;
+  }
+
+  .yui3-g-r > .yui3-u-1-5-print {
+    width: 20%;
+  }
+
+  .yui3-g-r > .yui3-u-2-5-print {
+    width: 40%;
+  }
+
+  .yui3-g-r > .yui3-u-3-5-print {
+    width: 60%;
+  }
+
+  .yui3-g-r > .yui3-u-4-5-print {
+    width: 80%;
+  }
+
+  .yui3-g-r > .yui3-u-1-6-print {
+    width: 16.656%;
+  }
+
+  .yui3-g-r > .yui3-u-5-6-print {
+    width: 83.33%;
+  }
+
+  .yui3-g-r > .yui3-u-1-8-print {
+    width: 12.5%;
+  }
+
+  .yui3-g-r > .yui3-u-3-8-print {
+    width: 37.5%;
+  }
+
+  .yui3-g-r > .yui3-u-5-8-print {
+    width: 62.5%;
+  }
+
+  .yui3-g-r > .yui3-u-7-8-print {
+    width: 87.5%;
+  }
+
+  .yui3-g-r > .yui3-u-1-12-print {
+    width: 8.3333%;
+  }
+
+  .yui3-g-r > .yui3-u-5-12-print {
+    width: 41.6666%;
+  }
+
+  .yui3-g-r > .yui3-u-7-12-print {
+    width: 58.3333%;
+  }
+
+  .yui3-g-r > .yui3-u-11-12-print {
+    width: 91.6666%;
+  }
+
+  .yui3-g-r > .yui3-u-1-24-print {
+    width: 4.1666%;
+  }
+
+  .yui3-g-r > .yui3-u-5-24-print {
+    width: 20.8333%;
+  }
+
+  .yui3-g-r > .yui3-u-7-24-print {
+    width: 29.1666%;
+  }
+
+  .yui3-g-r > .yui3-u-11-24-print {
+    width: 45.8333%;
+  }
+
+  .yui3-g-r > .yui3-u-13-24-print {
+    width: 54.1666%;
+  }
+
+  .yui3-g-r > .yui3-u-17-24-print {
+    width: 70.8333%;
+  }
+
+  .yui3-g-r > .yui3-u-19-24-print {
+    width: 79.1666%;
+  }
+
+  .yui3-g-r > .yui3-u-23-24-print {
+    width: 95.8333%;
+  }
+}
 .clearfix:before, .clearfix:after {
   content: "\0020";
   display: block;
@@ -2405,6 +2520,11 @@ span.placeholder {
   /* tablet */
   /* Phone */
 }
+@media print {
+  .view-widget-test-subsection {
+    padding: 0;
+  }
+}
 @media only screen and (min-width: 631px) and (max-width: 768px) {
   .view-widget-test-subsection {
     padding-left: 140px;
@@ -2431,6 +2551,11 @@ span.placeholder {
   position: absolute;
   top: 13px;
   left: -32px;
+}
+@media print {
+  .view-widget-test-subsection > .header .widget-arrow {
+    display: none;
+  }
 }
 @media only screen and (max-width: 630px) {
   .view-widget-test-subsection > .header {
@@ -3295,6 +3420,11 @@ span.placeholder {
     margin-left: -32.5px;
   }
 }
+@media print {
+  .view-overview .widget-circle-arrow {
+    display: none;
+  }
+}
 .view-overview .contact {
   font-family: 'Apercu', sans-serif;
   font-size: 123.1%;
@@ -3474,6 +3604,11 @@ span.placeholder {
   padding: 20px 20px 20px 140px;
   /* tablet */
   /* Phone */
+}
+@media print {
+  .view-test-base .test-section-inner-with-icon {
+    padding: 0;
+  }
 }
 .view-test-base .test-section-inner-with-icon.first {
   padding-bottom: 0;
