--- a/js/template/test/urineanalysis/ChemicalComponent.html
+++ b/js/template/test/urineanalysis/ChemicalComponent.html
@@ -1,24 +1,24 @@
 <div class="view-test-urine-analysis-chemical-component">
     <div class="yui3-g-r">
-        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone yui3-u-1-4-print">
             <div class="yui3-u-c">
                 <div class="glucose"></div>
             </div>
         </div>
 
-        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone yui3-u-1-4-print">
             <div class="yui3-u-c">
                 <div class="protein"></div>
             </div>
         </div>
 
-        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone yui3-u-1-4-print">
             <div class="yui3-u-c">
                 <div class="ketones"></div>
             </div>
         </div>
 
-        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+        <div class="yui3-u-1-3 yui3-u-1-2-small-tablet yui3-u-1-2-phone yui3-u-1-4-print">
             <div class="yui3-u-c">
                 <div class="bilirubin"></div>
             </div>
