--- a/css-sass/view/_overview.scss
+++ b/css-sass/view/_overview.scss
@@ -227,6 +227,11 @@
 		.testCounter {
 			text-align: center;
 			margin: 20px 0;
+			font-weight: normal;
+
+			.item {
+				font-weight: bold;
+			}
 		}
 	}
 
