--- a/css-sass/view/subtest/_range-group.scss
+++ b/css-sass/view/subtest/_range-group.scss
@@ -20,6 +20,10 @@
         width: 65px;
         vertical-align: middle;
 
+        @media print {
+            display: none;
+        }
+
         .button {
             $width: 45px;
             $height: 45px;
@@ -109,6 +113,11 @@
         width: 100%;
         height: 100%;
         position: relative;
+
+        @media print {
+            width: 100% !important;
+            display: table;
+        }
     }
 
     .range-item {
@@ -116,6 +125,11 @@
         float: left;
         position: relative;
         width: $rangeItemWidth;
+
+        @media print {
+            display: table-cell;
+            float: none;
+        }
 
         .label {
             width: 100%;
