--- a/js/template/widget/Indicator.html
+++ b/js/template/widget/Indicator.html
@@ -1,3 +1,4 @@
 <span class="widget-indicator {{#if isBad}}bad{{/if}} {{#if isBig}}big{{/if}}">
+    <img src="images/widget/indicator/{{#if isBad}}bad{{else}}good{{/if}}{{#if isBig}}-big{{/if}}-2x.png" alt="">
     <span class="dot"></span>
 </span>
