print: header backgrounds now in color by replacing background-color with border

--- a/css-sass/view/subtest/pod/_base.scss
+++ b/css-sass/view/subtest/pod/_base.scss
@@ -2,6 +2,10 @@
 	@include secondaryFont;
 	max-width: 235px;
     margin: 0 auto;
+
+    @media print {
+        margin: 0;
+    }
 	
 	>.inner {
 		background-color: #fcfcfb;
