--- a/css-sass/view/_survey.scss
+++ b/css-sass/view/_survey.scss
@@ -1,6 +1,10 @@
 .reveal-modal-bg {
     background: black;
     @include opacity(0.7);
+
+    @media print {
+        display: none !important;
+    }
 }
 .view-survey {
     padding: 0;
@@ -11,6 +15,10 @@
 
     margin-left: -40%;
     width: 80%;
+
+    @media print {
+        display: none !important;
+    }
 
     .outer {
         display: inline-block;
