--- a/css-sass/view/test/_cbc.scss
+++ b/css-sass/view/test/_cbc.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(cbc, #00A977, #38B781, "diagram-feline-2x.png");
+@include view-test-base-extend(cbc, #00A977, #38B781, "diagram-feline-2x.png", $page-break-inside: auto);
 
 .view-test-cbc {
     .chart {
