--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -1,4 +1,4 @@
-@include view-test-base-extend(urine, #613B97, #6B499E);
+@include view-test-base-extend(urine, #613B97, #6B499E, $page-break-inside: auto);
 
 .view-test-urine-analysis {
     .test-section-description {
