--- a/css/screen.css
+++ b/css/screen.css
@@ -2508,6 +2508,7 @@ span.placeholder {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   padding: 0 20px 15px 160px;
+  page-break-inside: avoid;
   /* tablet */
   /* Phone */
 }
@@ -3694,6 +3695,7 @@ span.placeholder {
 }
 
 .test-header {
+  page-break-inside: avoid;
   height: 85px;
   background-repeat: repeat-x;
   color: white;
@@ -3808,6 +3810,9 @@ span.placeholder {
   }
 }
 
+.view-test-accuplex {
+  page-break-inside: avoid;
+}
 .view-test-accuplex > .body > .overview {
   background-color: #d62187;
 }
@@ -3824,6 +3829,9 @@ span.placeholder {
   }
 }
 
+.view-test-cbc {
+  page-break-inside: auto;
+}
 .view-test-cbc > .body > .overview {
   background-color: #38b781;
 }
@@ -3912,6 +3920,9 @@ span.placeholder {
   }
 }
 
+.view-test-chemistry {
+  page-break-inside: avoid;
+}
 .view-test-chemistry > .body > .overview {
   background-color: #2759b9;
 }
@@ -3940,6 +3951,9 @@ span.placeholder {
   }
 }
 
+.view-test-felv-fiv {
+  page-break-inside: avoid;
+}
 .view-test-felv-fiv > .body > .overview {
   background-color: #0e95a3;
 }
@@ -3956,6 +3970,9 @@ span.placeholder {
   }
 }
 
+.view-test-heartworm {
+  page-break-inside: avoid;
+}
 .view-test-heartworm > .body > .overview {
   background-color: #ec3033;
 }
@@ -3972,6 +3989,9 @@ span.placeholder {
   }
 }
 
+.view-test-ova {
+  page-break-inside: avoid;
+}
 .view-test-ova > .body > .overview {
   background-color: #2d90f7;
 }
@@ -3988,6 +4008,9 @@ span.placeholder {
   }
 }
 
+.view-test-thyroxine {
+  page-break-inside: avoid;
+}
 .view-test-thyroxine > .body > .overview {
   background-color: #f7951c;
 }
@@ -4014,6 +4037,9 @@ span.placeholder {
   }
 }
 
+.view-test-urine {
+  page-break-inside: auto;
+}
 .view-test-urine > .body > .overview {
   background-color: #6b499e;
 }
