--- a/css-sass/view/_page.scss
+++ b/css-sass/view/_page.scss
@@ -34,6 +34,10 @@
         padding-top: 15px;
     }
 
+    @media print {
+        display: none;
+    }
+
     .links {
         font-size:  100%;
         text-align: right;
