--- a/css-sass/_base.scss
+++ b/css-sass/_base.scss
@@ -43,6 +43,10 @@ body {
     color: #333;
     background-color: #e8eae5;
     @include primaryFont;
+
+    @media print {
+        background-color: transparent;
+    }
 }
 
 p {
@@ -51,6 +55,11 @@ p {
 
 a, a:visited {
     color: #00beeb;
+
+    @media print {
+        color: inherit;
+        text-decoration: none;
+    }
 }
 
 h1, h2, h3, h4, h5, h6 {
