print: chemistry: added styles

--- a/css-sass/_tooltip.scss
+++ b/css-sass/_tooltip.scss
@@ -11,6 +11,10 @@
         margin: 15px;
         overflow: visible;
     }
+
+    @media print {
+        display: none !important;
+    }
 }
 
 #qtip-overlay {
