--- a/css-sass/view/test/_chemistry.scss
+++ b/css-sass/view/test/_chemistry.scss
@@ -11,4 +11,10 @@
             padding: 10px 0;
         }
     }
+
+    @media print {
+        .subtest-container {
+            padding: 10px 0;
+        }
+    }
 }
