--- a/js/template/subtest/RangeGroup.html
+++ b/js/template/subtest/RangeGroup.html
@@ -20,6 +20,9 @@
                             <div class="ranges-container">
                                 <div class="ranges">
                                     <div class="average-range"><div class="inner"></div></div>
+                                    <div class="view-subtest-range-group-item range-item yui3-visible-print average-range-legend">
+                                        <div class="inner">Expected Range</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
