--- a/js/template/subtest/RangeGroupItem.html
+++ b/js/template/subtest/RangeGroupItem.html
@@ -9,6 +9,8 @@
 
     <div class="value"><div class="indicator"></div></div>
 
+    <div class="value-number yui3-visible-print {{#if isBad}}bad{{/if}}">{{value}}</div>
+
     <div class="view-subtest-range-group-item-details">
         <h2 class="title">{{title}}</h2>
 
