print: fixed print-small issue

--- a/css-sass/view/widget/_indicator.scss
+++ b/css-sass/view/widget/_indicator.scss
@@ -85,7 +85,7 @@ $widgetIndicatorBigHeight: $widgetIndicatorBigWidth;
 
     @media print {
         &.print-small,
-        &.big {
+        &.print-small.big {
             width: $widthPrintSmall;
             height: $heightPrintSmall;
         }
